third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/transmute-ref-dst-generic.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/transmute-ref-dst-generic.rs:17:5
   |
17 |     transmute_ref!(u)
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `T` (this type does not have a fixed size)
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/transmute-ref-dst-generic.rs:17:5
   |
17 |     transmute_ref!(u)
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AlignOf<u8>` (8 bits)
   = note: target type: `MaxAlignsOf<u8, T>` (size can vary because of T)
   = note: this error originates in the macro `$crate::assert_align_gt_eq` which comes from the expansion of the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
